--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
 
         <module>legend-pure-configuration-external</module>
 
-        <module>legend-pure-code-compiled-platform</module>
+        <module>legend-pure-code-compiled-platform-par</module>
+        <module>legend-pure-code-compiled-platform-java</module>
         <module>legend-pure-code-compiled-core</module>
         <module>legend-pure-code-compiled-core-persistence</module>
         <module>legend-pure-code-compiled-core-relational</module>
@@ -482,12 +483,17 @@
             </dependency>
             <dependency>
                 <groupId>org.finos.legend.pure</groupId>
-                <artifactId>legend-pure-code-compiled-platform</artifactId>
+                <artifactId>legend-pure-code-compiled-platform-par</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.finos.legend.pure</groupId>
                 <artifactId>legend-pure-code-java-compiled-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finos.legend.pure</groupId>
+                <artifactId>legend-pure-code-compiled-platform-java</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
